dnl Process this file with autoconf to produce a configure script.
AC_INIT(parser3oracle.C)
AM_INIT_AUTOMAKE(parser3oracleclient, 3.0g, nodefine)

AM_CONFIG_HEADER(config_auto.h)

dnl Arguments

AC_ARG_WITH(oracleoci-inc,[  --with-oracleoci-inc[=DIR]      DIR is the Oracle OCI includes directory],,
	withval="$ORACLE_HOME/rdbms/demo"
)
ORACLE_OCI_INC=$withval
AC_SUBST(ORACLE_OCI_INC)

if test \! -f "$ORACLE_OCI_INC/oci.h"; then
	AC_MSG_ERROR($ORACLE_OCI_INC does not seem to be valid Oracle OCI includes directory)
fi


AC_ARG_WITH(oraclepublic-inc,[  --with-oraclepublic-inc[=DIR]      DIR is the Oracle public includes directory],,
	withval="$ORACLE_HOME/network/public"
)
ORACLE_PUBLIC_INC=$withval
AC_SUBST(ORACLE_PUBLIC_INC)

if test \! -f "$ORACLE_PUBLIC_INC/nzt.h"; then
	AC_MSG_ERROR($ORACLE_PUBLIC_INC does not seem to be valid Oracle public includes directory)
fi


dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_AWK

AC_LANG_CPLUSPLUS 
AC_PROG_CXX

AC_DEFUN(GCC_OPTION,
[
    AC_MSG_CHECKING(whether gcc accepts $1)
    save_CXXFLAGS=$CXXFLAGS
    CXXFLAGS="$save_CXXFLAGS $1"
    AC_TRY_COMPILE(,,
        AC_MSG_RESULT(yes)
        dnl leave CXXFLAGS
    ,		
        AC_MSG_RESULT(no)
        CXXFLAGS=$save_CXXFLAGS
    )
])

if test "z$GXX" = "zyes"; then
	dnl Versions of GCC up to 2.8.0 required -fhandle-exceptions, but it is
	dnl the default in versions 2.8.0 and after.
    dnl GCC_OPTION(-fhandle-exceptions)
    GCC_OPTION(-fno-rtti)
fi

dnl Enable building of the convenience library
dnl and set LIBLTDL accordingly
AC_LIBLTDL_CONVENIENCE
dnl Substitute INCLTDL and LIBLTDL in the Makefiles
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)
AC_SUBST(LIBADD_DL)
dnl Check for dlopen support
AC_LIBTOOL_DLOPEN
dnl Configure libtool
AM_PROG_LIBTOOL
dnl Configure libltdl
AC_CONFIG_SUBDIRS(libltdl)

dnl Checks for libraries.

dnl Checks for header files.

AC_CHECK_HEADERS(
stdio.h \
stdlib.h \
string.h \
setjmp.h \
ctype.h
)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_SIZE_T

dnl Checks for library functions.

dnl Output makefiles

AC_OUTPUT(libltdl/Makefile Makefile)
