dnl Process this file with autoconf to produce a configure script.
AC_INIT(parser3pgsql.C)
AM_INIT_AUTOMAKE(parser3pgsql, 3.1.1, nodefine)

AM_CONFIG_HEADER(config_auto.h)

dnl Arguments

AC_ARG_WITH(pgsql-inc,[  --with-pgsql-inc[=DIR]      DIR is the PgSQL includes directory],,
	withval="/usr/local/pgsql/include"
)
PGSQL_INC=$withval
AC_SUBST(PGSQL_INC)

if test \! -f "$PGSQL_INC/libpq-fe.h"; then
	AC_MSG_ERROR($PGSQL_INC does not seem to be valid PgSQL includes directory)
fi

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_AWK

AC_LANG_CPLUSPLUS 
AC_PROG_CXX

dnl Enable building of the convenience library
dnl and set LIBLTDL accordingly
AC_LIBLTDL_CONVENIENCE
dnl Substitute INCLTDL and LIBLTDL in the Makefiles
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)
AC_SUBST(LIBADD_DL)
dnl Configure libtool
AC_DISABLE_STATIC
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
dnl Configure libltdl
AC_CONFIG_SUBDIRS(libltdl)

dnl Checks for libraries.

dnl Checks for header files.

AC_CHECK_HEADERS(
stdio.h \
stdlib.h \
string.h \
setjmp.h
)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_SIZE_T

dnl Checks for library functions.

dnl Output makefiles

AC_OUTPUT(Makefile)
