dnl Process this file with autoconf to produce a configure script.
AC_INIT(parser3sqlite.C)
AC_PREREQ(2.57)

AM_INIT_AUTOMAKE(parser3sqlite, 10.0, nodefine)

AM_CONFIG_HEADER(config_auto.h)


AC_DEFUN([SQLITE_INC_CHK],[
	if test -r "$1/sqlite3.h"; then
		SQLITE_INC=$1
	fi
])
	

dnl Arguments

AC_ARG_WITH(sqlite-inc,[  --with-sqlite-inc=DIR        DIR is the SQLite includes directory],
	SQLITE_INC_CHK($withval)

	if test -z "$SQLITE_INC"; then
		AC_MSG_ERROR($SQLITE_INC does not seem to be valid SQLite includes directory)
	fi
,
	AC_MSG_CHECKING(for SQLITE_INC directory)
	for d in \
		/usr/local/include/sqlite \
		/usr/include/sqlite ; do
		SQLITE_INC_CHK($d)
	done

	if test -z "$SQLITE_INC"; then
		AC_MSG_ERROR(use --with-sqlite-inc=DIR to specify SQLite includes directory)
	fi

	AC_MSG_RESULT($SQLITE_INC)
)

AC_SUBST(SQLITE_INC)



AC_ARG_WITH(dynamic-stdcpp, [  --with-dynamic-stdcpp   link libstdc++ dynamically
                          by default, libstdc++ is linked statically],[
		LDFLAGS="-lstdc++"
],[
		LDFLAGS="-Wl,-Bstatic -Wl,-lstdc++ -Wl,-Bdynamic"
])

AC_SUBST(LDFLAGS)


dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC

dnl most tests should be compiled with C compiler [especially qsort test]
AC_LANG_C 

dnl Enable building of the convenience library
dnl and set LIBLTDL accordingly
AC_LIBLTDL_CONVENIENCE
dnl Substitute INCLTDL and LIBLTDL in the Makefiles
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)
AC_SUBST(LIBADD_DL)
dnl Configure libtool
AC_DISABLE_STATIC
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
dnl Configure libltdl
AC_CONFIG_SUBDIRS(libltdl)

dnl Checks for libraries.

dnl Checks for header files.

AC_CHECK_HEADERS(
stdio.h \
stdlib.h \
string.h \
setjmp.h \
ctype.h
)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_SIZE_T

dnl Checks for library functions.

dnl Output makefiles

AC_OUTPUT(Makefile)
